Bug 987054 - If we can't create a valid DrawTarget in GetThebesSurfaceForDrawTarget, error out r=mettwoodrow